# local-ai

./: .gitignore  README.md  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  hybridai.cpp  native-lib.cpp
app/src/main/java/com/example/hybridai/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/example/hybridai/core/: SystemHealthMonitor.kt  TaskOrchestrator.kt  TextToSpeechManager.kt
app/src/main/java/com/example/hybridai/data/: AppPreferences.kt  ModelCatalog.kt  ModelDownloadManager.kt  PersonaCatalog.kt
app/src/main/java/com/example/hybridai/data/db/: ChatDaos.kt  ChatDatabase.kt  ChatEntities.kt  ChatRepository.kt
app/src/main/java/com/example/hybridai/local/: InferenceEngine.kt  LlamaCppEngine.kt  LocalInferenceManager.kt  MediaPipeEngine.kt
app/src/main/java/com/example/hybridai/remote/: OnlineApiClient.kt
app/src/main/java/com/example/hybridai/ui/: AppNavigation.kt
app/src/main/java/com/example/hybridai/ui/chat/: ChatScreen.kt  EmptyStateView.kt  MarkdownText.kt  VoiceInputButton.kt
app/src/main/java/com/example/hybridai/ui/onboarding/: OnboardingScreen.kt
app/src/main/java/com/example/hybridai/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/example/hybridai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  themes.xml
